--- a/style.css
+++ b/style.css
@@ -34,14 +34,14 @@ main {
 
 .pine-tree {
     position: absolute;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'><path d='M128 16 L64 112 H104 L48 192 H96 L80 240 H176 L160 192 H208 L152 112 H192 Z' fill='black'/></svg>");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Cpath d='M128 16 L64 112 H104 L48 192 H96 L80 240 H176 L160 192 H208 L152 112 H192 Z' fill='%23000000'/%3E%3C/svg%3E");
     background-size: contain;
     background-repeat: no-repeat;
-    width: 50px; 
+    width: 50px;
     height: 70px;
     pointer-events: none;
     opacity: 1;
-    z-index: 0;
+    z-index: 1; /* makes trees visible above background */
 }
 
 h1 {
@@ -53,4 +53,5 @@ p {
     font-size: 1.1em;
     line-height: 1.5;
 }
+
 
