--- a/style.css
+++ b/style.css
@@ -2,22 +2,19 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: #006400;
-    color: #fff;
-    line-height: 1.6;
-    position: relative;
+    color: white;
     overflow-x: hidden;
+    position: relative;
 }
 
 header {
     text-align: center;
-    padding: 30px 0;
-    position: relative;
-    z-index: 2;
-    background: none;
+    padding: 20px 0;
+    background: transparent;
 }
 
 .header-image {
-    width: 350px;
+    width: 600px;
     max-width: 90%;
     height: auto;
     border-radius: 10px;
@@ -29,32 +26,30 @@ main {
     max-width: 700px;
     margin: 40px auto;
     padding: 20px;
-    position: relative;
-    z-index: 2;
 }
 
 .pine-tree {
     position: absolute;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Cpath d='M128 16 L64 112 H104 L48 192 H96 L80 240 H176 L160 192 H208 L152 112 H192 Z' fill='%23000000'/%3E%3C/svg%3E");
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 40px;
-    height: 60px;
+    width: 50px;
+    height: 80px;
     opacity: 0.9;
     pointer-events: none;
     z-index: 0;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Cpath d='M128 16 L64 112 H104 L48 192 H96 L80 240 H176 L160 192 H208 L152 112 H192 Z' fill='%23000000'/%3E%3C/svg%3E");
 }
 
 h1 {
     font-size: 2.4em;
     margin-bottom: 20px;
-    font-weight: bold;
 }
 
 p {
     font-size: 1.1em;
     line-height: 1.5;
 }
+
 
 
 
