--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Cinzel', serif;
     background-color: #006400;
     color: white;
     overflow-x: hidden;
@@ -41,14 +41,19 @@ main {
 }
 
 h1 {
+    font-family: 'Playfair Display', serif;
+    font-style: italic;
     font-size: 2.4em;
     margin-bottom: 20px;
+    font-weight: 600;
 }
 
 p {
+    font-family: 'Cinzel', serif;
     font-size: 1.1em;
     line-height: 1.5;
 }
+
 
 
 
